Chrome OS: First run PIN setup should be shown only when not disabled by policy.

Bug: 901107
Change-Id: Ieb943ad33a824318ea391b626285e6c4b8a71fc4
Reviewed-on: https://chromium-review.googlesource.com/c/1313929
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Commit-Queue: Alexander Alekseev <alemate@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605056}
Former-commit-id: 1e48a0bb40e77cbd22d1da2f86945c438e798b41